--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,43 @@ body {
 #root {
   min-height: 100vh;
 }
+
+@font-face {
+  font-family: 'DINRounded';
+  src: url('/font/DINRoundPro-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'DINRounded';
+  src: url('/font/DINRoundPro-Regular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'DINRounded';
+  src: url('/font/DINRoundPro-Medium.otf') format('opentype');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'DINRounded';
+  src: url('/font/DINRoundPro-Bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'DINRounded';
+  src: url('/font/DINRoundPro-Black.otf') format('opentype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
